features done but margins not showing correctly for entire row

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,9 @@ nav {
     padding: 80px 0;
 }
 
+section {
+    padding: 0 32px;
+}
 
 /*
 
@@ -228,6 +231,7 @@ FEATURES
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .features__description--title {
@@ -267,11 +271,20 @@ FEATURES
 
 .service {
     display: flex;
+    padding: 32px 24px;
 }
 
 .service__img {
     width: 24px;
     height: 24px;
+}
+
+.service__img--wrapper {
+    display: flex;
+    padding: 20px;
+    border: 1px solid #e5e7eb;
+    border-radius: 50px;
+    height: 65px;
 }
 
 .service_description {
